@@ -25,6 +25,7 @@
 	* Added options initializeWithEmptyQuery, showResultsOfInitialEmptyQuery as replacement for allowEmptyQuery
 	* Added methods setAlternativeQuery() and getAlternativeQuery() to tx_solr_Query
 	* Fixed issue #13494: Facet link not working with empty query
+	* Added tx_solr_Query::setQueryType() and tx_solr_Query::getQueryType()
 
 2011-06-11  Ingo Renner  <ingo.renner@dkd.de>
 
